# deepr

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  BUGFIX_PROVIDER_COLUMN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT-STATE-ANALYSIS.md  Dockerfile  LICENSE  MANIFEST.in  PROGRESS-LOG.md  QUALITY-RUBRIC.md  README.md  ROADMAP.md  SECURITY.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SKILLS.md  Utility Cancell Active Jobs.bat  check_expert_jobs.py  coverage.json  deepr.py  inspect_research_output.py  learner-mcp-report.md  manager.py  normalize.py  poll_research_jobs.py  pyproject.toml  readme.txt  readmemanger.txt  requirements.txt  set-env-paths.ps1  (+4 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mutation.yml
DEPRECATED/: README.md.bak  README.old.md  deepr.py  deepr_v1.py  manager.py  manager_v1.py
config/: system_message.json
deepr/: __init__.py  branding.py  cli.py  config.py
deepr/a2a/: agent_card.py  models.py  server.py  task_manager.py
deepr/agents/: __init__.py  agent_tool.py  circuit_breaker.py  contract.py  handoff.py  orchestrator.py  runtime.py
deepr/api/: __init__.py  app.py  app_simple.py
deepr/backends/: __init__.py  capacity.py  local.py  waterfall.py
deepr/cli/: __init__.py  async_runner.py  colors.py  live_status.py  main.py  output.py  progress.py  realtime_progress.py  startup_banner.py  ui.py  validation.py
deepr/core/: __init__.py  company_research.py  constants.py  contracts.py  costs.py  documents.py  errors.py  evidence.py  jobs.py  reports.py  research.py  schema_version.py  settings.py  unified_config.py
deepr/experts/: __init__.py  activity_tracker.py  approval.py  atomicity.py  beliefs.py  budget_manager.py  calibration.py  chat.py  citation_validator.py  command_handlers.py  commands.py  confidence_calibration.py  conflict_resolver.py  consensus.py  constants.py  continuity_metrics.py  corpus.py  cost_safety.py  council.py  curriculum.py  digest.py  dspy_pipeline.py  embedding_cache.py  errors.py  freshness.py  gap_discovery.py  gap_fill.py  gap_router.py  gap_scorer.py  health_check.py  knowledge_consolidation.py  lazy_graph_rag.py  learner.py  map_reduce.py  memory.py  metacognition.py  multi_pass.py  perspective.py  portraits.py  profile.py  (+11 more)
deepr/formatting/: __init__.py  converters.py  normalize.py  style.py
deepr/mcp/: __init__.py  artifacts.py  server.py
deepr/observability/: __init__.py  circuit_breaker.py  cost_ledger.py  costs.py  information_gain.py  metadata.py  provider_router.py  quality_metrics.py  routing_log.py  stopping_criteria.py  temporal_tracker.py  timeline_renderer.py  traces.py
deepr/providers/: __init__.py  anthropic_provider.py  azure_foundry_provider.py  azure_provider.py  base.py  gemini_provider.py  grok_provider.py  openai_provider.py  registry.py
deepr/queue/: __init__.py  azure_queue.py  base.py  local_queue.py
deepr/research_agent/: poller.py
deepr/routing/: __init__.py  auto_mode.py  deprecation.py  quality_priors.py
deepr/security/: __init__.py  audit.py  permissions.py
deepr/services/: batch_auto.py  batch_executor.py  context_builder.py  context_chainer.py  context_index.py  context_pruner.py  doc_reviewer.py  expert_validator.py  prompt_refiner.py  provider_router.py  research_api.py  research_planner.py  research_reviewer.py  team_architect.py  token_budget.py
deepr/skills/: expert_skill.py  packager.py  templates.py
deepr/storage/: __init__.py  base.py  blob.py  findings_store.py  local.py
deepr/tools/: __init__.py  (+5 more)
deploy/: README.md  mcp-http.md
docs/: AGENTIC_PLANNING_EXAMPLE.md  AGENTIC_VISION.md  ARCHITECTURE.md  ARCHIVE.md  BENCHMARKS.md  BRANDING.md  BUGFIX_CONTAINER_PARAMETER.md  CALIBRATION.graded.jsonl  CALIBRATION.md  CAPACITY.md  CHANGELOG.md  CLI_GUIDE.md  DEEP_RESEARCH_EXPLAINED.md  DESIGN.md  DREAM_TEAM_DESIGN.md  Deepr concept thinking 10-30-2025.txt  EXAMPLES.md  EXPERTS.md  FEATURES.md  FINAL_SESSION_SUMMARY.md  GEMINI_IMPLEMENTATION.md  GROK_AS_DEFAULT.md  HOW_EXPERT_LEARNING_WORKS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATIONS.md  KILO_CONSCIOUSNESS.md  LEARNING_WORKFLOW.md  MCP_A2A_INTEROP_CHECKLIST.md  MCP_AGENT_TEST_GUIDE.md  MCP_REFINEMENT_PLAN.md  MIGRATION.md  MODELS.md  MODEL_SELECTION.md  MULTI_PROVIDER_SUMMARY.md  PERFORMANCE.md  PHASE_3A_COMPLETE.md  PHASE_3A_FIX_COMPLETE.md  PHASE_3A_ISSUES.md  PHASE_3A_REASONING_ENHANCEMENT.md  (+35 more)
examples/: scrape_demo.py
mcp/: README.md  docker-compose.yml  mcp-config-claude-desktop.json  mcp-config-cursor.json  mcp-config-vscode.json  openclaw-config.json  openclaw-docker-config.json
requirements/: base.txt  cli.txt  dev.txt  web.txt
scripts/: Makefile  README.md  Utility_Cancell_Active_Jobs.ps1  analyze_doc_gaps.py  ask_expert_about_roadmap.py  benchmark_models.py  build.bat  build_frontend_archive.py  chat_with_expert.py  check_campaign.py  check_costs.py  check_docs_consistency.py  check_file_sizes.py  check_ratchets.py  check_wheel_frontend.py  cleanup_local.py  convert_legacy_report.py  create_demo_experts.py  destroy_azure.py  discover_models.py  install.bat  install.ps1  install.sh  migrate_expert_profiles.py  monitor_research_jobs.py  research_mcp_best_practices.py  setup_azure.py  setup_local.py  submit_doc_research_jobs.py  test_all.ps1  test_all.py  test_all.sh  test_learning.py  upload_mcp_docs_to_expert.py  validate_integrations.py
tests/: EXPERT_TESTS.md  QUICK_REFERENCE.md  README.md  TESTING_SUMMARY.md  TEST_EXPERT_CREATION.md  cheap_test_prompts.py  check_vector_store.py  conftest.py  pytest.ini  test_e2e_cheap.py  test_expert_cached.txt  test_expert_chat.py  test_expert_input.txt  test_expert_keyboards_e2e.py  test_expert_keyboards_simple.py  test_expert_quick.py  test_fabric_iq.txt  test_fabric_iq_cached.txt  test_grok_search.py  test_output.txt  test_scrape_cli_integration.py  test_scrape_core.py  test_two_phase_curriculum.py  validate_expert_learning.py
(+1594 files in other folders)
