[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepr-research"
version = "2.11.0"
description = "Research automation platform that replicates human research team workflows using AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nick Seal", email = "nick@pueo.io"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["research", "ai", "automation", "deep-research", "knowledge-graph", "llm"]

# Core dependencies - minimal install for CLI research
dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiofiles>=23.0.0,<26.0.0",
    "colorama>=0.4.6,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "httpx>=0.23.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
]

[project.optional-dependencies]
# Web UI and MCP server
web = [
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "flask-socketio>=5.3.0,<6.0.0",
    "python-socketio>=5.10.0,<6.0.0",
    "flasgger>=0.9.7,<1.0.0",
    "flask-limiter>=3.5.0,<4.0.0",
]

# Azure cloud deployment
azure = [
    "azure-identity>=1.12.0,<2.0.0",
    "azure-servicebus>=7.11.0,<8.0.0",
    "azure-storage-blob>=12.19.0,<13.0.0",
]

# Azure AI Foundry deep research
azure-foundry = [
    "azure-ai-projects>=1.0.0b4",
    "azure-ai-agents>=1.0.0b4",
    "azure-identity>=1.12.0,<2.0.0",
]

# Document processing for experts
docs = [
    "python-docx>=0.8.11,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "numpy>=1.24.0,<3.0.0",
]

# Full install with all features
full = [
    "deepr-research[web,azure,azure-foundry,docs]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.15.1",
    "hypothesis>=6.0.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
deepr = "deepr.cli.main:main"

[project.urls]
Homepage = "https://github.com/blisspixel/deepr"
Documentation = "https://github.com/blisspixel/deepr/tree/main/docs"
Repository = "https://github.com/blisspixel/deepr"
Issues = "https://github.com/blisspixel/deepr/issues"

[tool.coverage.run]
source = ["deepr"]
omit = [
    # CLI commands and rendering — covered by end-to-end tests, not units.
    "deepr/cli/commands/*",
    "deepr/cli/realtime_progress.py",
    "deepr/cli/startup_banner.py",
    "deepr/cli/ui.py",
    # Web app — large Flask surface, manually QA'd + smoke-tested.
    "deepr/web/*",
    # WebSocket / SocketIO event handlers require a live Flask context.
    "deepr/api/websockets/*",
    # HTTP webhook server — runs only in long-lived deployments.
    "deepr/webhooks/*",
    # S3 / blob storage — integration-tested against AWS.
    "deepr/storage/blob.py",
    # Playwright/headless-browser backend.
    "deepr/tools/browser_backend.py",
    # Optional DSPy integration — gracefully degrades when the
    # ``dspy`` package isn't installed; covered by DSPy-specific tests.
    "deepr/experts/dspy_pipeline.py",
    # Autonomous learning loop — long-running, integration-tested.
    "deepr/experts/learner.py",
    # Slash-command dispatcher — covered by chat integration tests.
    "deepr/experts/command_handlers.py",
    # Skill execution wrapper — covered by skill integration tests.
    "deepr/experts/skills/expert_skill.py",
    "deepr/experts/skills/executor.py",
    # Web scraper — covered by integration tests against live targets.
    "deepr/utils/scrape/*",
    # Image-generation provider for expert portraits (OpenAI/Gemini/XAI).
    "deepr/experts/portraits.py",
    # CLI timeline / colour / styling renderers (Rich-rendered display).
    "deepr/observability/timeline_renderer.py",
    "deepr/cli/colors.py",
    # DOCX/PDF style helpers (heavy python-docx surface).
    "deepr/formatting/style.py",
    # Research-agent poller (long-running background worker — covered by
    # integration runs against live providers).
    "deepr/research_agent/poller.py",
    # MCP credential manager (interactive prompts + OS keyring integration).
    "deepr/mcp/state/credential_manager.py",
    # Ad-hoc maintenance scripts.
    "deepr/utils/check_expert_status.py",
    "deepr/utils/download_expert_reports.py",
    "deepr/utils/integrate_pending_research.py",
    "deepr/utils/retrieve_expert_reports.py",
]

[tool.coverage.report]
# Raised from the original 60% baseline after the v2.10.3 test pass,
# then again from 75% to 80% after the post-release coverage drive
# added focused tests on MCP server tool methods, both MCP transports,
# Azure + Gemini provider adapters, web search backends, context index
# / chainer, worker poller, and the utils.security helpers. The
# remaining ~20% sits in LLM-driven integration paths (chat.py,
# curriculum.py, lazy_graph_rag.py) that are exercised by end-to-end
# and live-provider tests rather than units.
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "E402",    # module-level-import-not-at-top (conditional imports)
    "B904",    # raise-without-from-inside-except (CLI error handlers)
    "B007",    # unused-loop-control-variable (harmless in dict iteration)
    "RUF001",  # ambiguous-unicode-character-string (intentional emoji/chars)
    "RUF012",  # mutable-class-default (dataclass fields use field())
    # Deferred semantic migrations (tracked in ROADMAP "Phase E"): these are
    # behavioral, not mechanical, so they are handled deliberately rather than
    # by blanket autofix.
    "UP042",   # replace-str-enum (str, Enum -> StrEnum changes mixin semantics)
    "B905",    # zip-without-explicit-strict (strict= needs per-call judgement)
]

# S* rules are not in `select` but are used as noqa anchors throughout the
# codebase (documented resilience swallows, non-crypto hashes for cache keys,
# trusted-internal subprocess calls). Listing them here keeps RUF100 from
# flagging those explanatory noqa comments as unused under default runs.
# Run `ruff check --select S` to surface them explicitly for audit.
external = ["S104", "S105", "S110", "S112", "S311", "S324", "S603", "S607", "S608"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F811", "F841", "E712", "B005", "B017", "RUF006"]
"tests/integration/**/*.py" = ["F401"]
"deepr/cli/**/*.py" = ["B023"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = [
    "archive",
    ".*",
    "*.egg",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
addopts = ["-v", "--tb=short", "--strict-markers"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::RuntimeWarning:click.*",
]
markers = [
    "unit: marks tests as unit tests (no API calls, always free)",
    "integration: marks tests as integration tests (require API keys, may cost money)",
    "e2e: marks tests as end-to-end tests (real APIs, costs money)",
    "requires_api: marks tests that require API keys and may cost money",
    "file_upload: marks tests that test file upload functionality (costs money)",
    "research_modes: marks tests that test all 4 research modes (focus, docs, project, team)",
    "expensive: marks tests that cost >$1 (run sparingly)",
    "slow: marks tests as slow (may take >1 second)",
    "property: marks tests as property-based tests using Hypothesis",
    "security: marks tests as security-focused tests",
]

[tool.mypy]
# Type checking is being introduced incrementally (see ROADMAP "Phase E:
# Engineering Standards"). The committed end state is `--strict` as a blocking
# gate over all of `deepr/`. Today it runs NON-BLOCKING in CI to record a
# baseline; these settings are deliberately lenient so the baseline is the set
# of real type errors, not import-resolution noise. Strictness is ratcheted up
# package-by-package (core/, providers/, mcp/ first) as annotations land.
python_version = "3.11"
files = ["deepr"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
# Per-package strict islands are switched on here as each is cleaned, e.g.
#   [[tool.mypy.overrides]]
#   module = "deepr.core.*"
#   disallow_untyped_defs = true

[tool.uv]
# uv is the canonical package + Python-version manager (see ROADMAP "Phase E").
# `uv.lock` + `.python-version` pin a reproducible environment across dev, CI,
# and containers. setuptools remains the build backend for wheel compatibility,
# so `pip install deepr-research` keeps working for downstream consumers.
resolution = "highest"

[tool.setuptools.package-data]
deepr = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepr*"]
exclude = ["tests*", "docs*"]
