[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepr-research"
version = "2.36.2"
description = "Research automation platform that replicates human research team workflows using AI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Nick Seal"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["research", "ai", "automation", "deep-research", "knowledge-graph", "llm"]

# Core dependencies - minimal install for CLI research
dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.0.0,<3.0.0",
    "google-genai>=1.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiofiles>=23.0.0,<26.0.0",
    "colorama>=0.4.6,<1.0.0",
    "rich>=13.0.0,<16.0.0",
    "httpx>=0.23.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "aiohttp>=3.14.1,<4.0.0",
    # filelock backs the cross-platform per-(expert, verb) overlap guard
    # (deepr.experts.loop_lock) so scheduled verbs never double-run on one
    # expert. Declared as a direct dependency rather than relying on it being
    # pulled in transitively; Windows-first rules out POSIX flock.
    "filelock>=3.12.0,<4.0.0",
    # NumPy backs documented expert embedding and semantic-recall surfaces, so
    # it remains a core runtime dependency. Lazy package exports keep it off the
    # root help and version cold-start path. It was previously only in the
    # `docs` extra, which made a plain install crash when those core expert
    # surfaces loaded; `[full]`/dev installs masked it. A core-install smoke
    # test in CI guards this class now.
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
# Web UI and MCP server
web = [
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=6.0.0,<7.0.0",  # >=6.0.0 clears CVE-2024-6839/6844/6866 (4.x)
    "flask-socketio>=5.3.0,<6.0.0",
    "python-socketio>=5.10.0,<6.0.0",
    "flasgger>=0.9.7,<1.0.0",
    "mistune>=3.3.0,<4.0.0",  # >=3.3.0 clears CVE-2026-49851 from Flasgger's transitive floor
    "flask-limiter>=3.5.0,<5.0.0",
]

# Azure cloud deployment
azure = [
    "azure-identity>=1.12.0,<2.0.0",
    "azure-servicebus>=7.11.0,<8.0.0",
    "azure-storage-blob>=12.19.0,<13.0.0",
]

# Azure AI Foundry deep research
azure-foundry = [
    "azure-ai-projects>=1.0.0b4",
    "azure-ai-agents>=1.0.0b4",
    "azure-identity>=1.12.0,<2.0.0",
]

# Document processing for experts
docs = [
    "python-docx>=0.8.11,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
]

# Free keyless web search for $0 fresh-context retrieval (local/plan maintenance).
# ``ddgs`` is the maintained successor to the deprecated ``duckduckgo-search``,
# whose old endpoint now returns no results.
search = [
    "ddgs>=9.0.0,<10.0.0",
]

# Full install with all features
full = [
    "deepr-research[web,azure,azure-foundry,docs,search]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-timeout>=2.3.0",
    "black>=23.0.0",
    "ruff>=0.15.17",
    "hypothesis>=6.0.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
    "pip-audit>=2.7.0",
    "mutmut>=3.0.0",
]

[project.scripts]
deepr = "deepr.cli.main:main"

[project.urls]
Homepage = "https://github.com/blisspixel/deepr"
Documentation = "https://github.com/blisspixel/deepr/tree/main/docs"
Repository = "https://github.com/blisspixel/deepr"
Issues = "https://github.com/blisspixel/deepr/issues"

[tool.coverage.run]
source = ["deepr"]
# Branch coverage is enabled (Phase E): stricter than line coverage, so the
# headline number is legitimately lower (branch ~78% vs line ~82% for the same
# tests). The gate ratchets up from this real branch baseline.
branch = true
omit = [
    # CLI commands and rendering - covered by end-to-end tests, not units.
    "src/deepr/cli/commands/*",
    "src/deepr/cli/realtime_progress.py",
    "src/deepr/cli/startup_banner.py",
    "src/deepr/cli/ui.py",
    # Web app - large Flask surface, manually QA'd + smoke-tested.
    "src/deepr/web/*",
    # WebSocket / SocketIO event handlers require a live Flask context.
    "src/deepr/api/websockets/*",
    # HTTP webhook server - long-lived deployment surface; focused auth tests
    # cover the fail-closed request path while deployment behavior is exercised
    # outside unit coverage.
    "src/deepr/webhooks/*",
    # S3 / blob storage - integration-tested against AWS.
    "src/deepr/storage/blob.py",
    # Playwright/headless-browser backend.
    "src/deepr/tools/browser_backend.py",
    # Optional DSPy integration - gracefully degrades when the
    # ``dspy`` package isn't installed; covered by DSPy-specific tests.
    "src/deepr/experts/dspy_pipeline.py",
    # Autonomous learning loop - long-running, integration-tested.
    "src/deepr/experts/learner.py",
    # Slash-command dispatcher - covered by chat integration tests.
    "src/deepr/experts/command_handlers.py",
    # Skill execution wrapper - covered by skill integration tests.
    "src/deepr/experts/skills/expert_skill.py",
    "src/deepr/experts/skills/executor.py",
    # Web scraper - covered by integration tests against live targets.
    "src/deepr/utils/scrape/*",
    # Image-generation provider for expert portraits (OpenAI/Gemini/XAI).
    "src/deepr/experts/portraits.py",
    # CLI timeline / colour / styling renderers (Rich-rendered display).
    "src/deepr/observability/timeline_renderer.py",
    "src/deepr/cli/colors.py",
    # DOCX/PDF style helpers (heavy python-docx surface).
    "src/deepr/formatting/style.py",
    # Research-agent poller (long-running background worker - covered by
    # integration runs against live providers).
    "src/deepr/research_agent/poller.py",
    # MCP credential manager (interactive prompts + OS keyring integration).
    "src/deepr/mcp/state/credential_manager.py",
    # Ad-hoc maintenance scripts.
    "src/deepr/utils/check_expert_status.py",
    "src/deepr/utils/download_expert_reports.py",
    "src/deepr/utils/integrate_pending_research.py",
    "src/deepr/utils/retrieve_expert_reports.py",
]

[tool.coverage.report]
# Raised from the original 60% baseline after the v2.10.3 test pass,
# then again from 75% to 80% after the post-release coverage drive
# added focused tests on MCP server tool methods, both MCP transports,
# Azure + Gemini provider adapters, web search backends, context index
# / chainer, worker poller, and the utils.security helpers. The
# remaining sits in LLM-driven integration paths (chat.py,
# curriculum.py, lazy_graph_rag.py) that are exercised by end-to-end
# and live-provider tests rather than units.
#
# Branch coverage is on (Phase E): it counts untaken branches the line metric
# ignored, so the same suite measures lower than the old line metric. The
# ratchet target is 80 -> 85 -> 90 -> 95 as branch-covering tests land - a
# higher bar than the old 80% line gate. Raised 78 -> 80 once the branch suite
# cleared it (pure-module test backfill: converters, commands, thought_stream,
# user_profile, local storage, a2a routing).
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "E402",    # module-level-import-not-at-top (conditional imports)
    "B904",    # raise-without-from-inside-except (CLI error handlers)
    "B007",    # unused-loop-control-variable (harmless in dict iteration)
    "RUF001",  # ambiguous-unicode-character-string (intentional emoji/chars)
    "RUF012",  # mutable-class-default (dataclass fields use field())
    # Deferred semantic migrations (tracked in ROADMAP "Phase E"): these are
    # behavioral, not mechanical, so they are handled deliberately rather than
    # by blanket autofix.
    "UP042",   # replace-str-enum (str, Enum -> StrEnum changes mixin semantics)
    "UP047",   # non-pep695-generic-function (PEP 695 generics: semantic migration)
    "B905",    # zip-without-explicit-strict (strict= needs per-call judgement)
]

# S* rules are not in `select` but are used as noqa anchors throughout the
# codebase (documented resilience swallows, non-crypto hashes for cache keys,
# trusted-internal subprocess calls). Listing them here keeps RUF100 from
# flagging those explanatory noqa comments as unused under default runs.
# Run `ruff check --select S` to surface them explicitly for audit.
external = ["S104", "S105", "S110", "S112", "S311", "S324", "S603", "S607", "S608"]

[tool.ruff.lint.mccabe]
# Cyclomatic-complexity cap. C901 is not in the main `select` (it would fail
# the build on ~134 legacy functions); it runs ADVISORY in CI (`--select
# S,C901`) so high-complexity functions surface as a visible backlog. Phase E
# ratchets this toward blocking as the worst offenders are refactored.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F811", "F841", "E712", "B005", "B017", "RUF006"]
"tests/integration/**/*.py" = ["F401"]
"src/deepr/cli/**/*.py" = ["B023"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = [
    "archive",
    ".*",
    "*.egg",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-socket",
    "--allow-unix-socket",
    "--allow-hosts=localhost,127.0.0.1,::1",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::RuntimeWarning:click.*",
]
markers = [
    "unit: marks tests as unit tests (no API calls, always free)",
    "integration: marks tests as integration tests (require API keys, may cost money)",
    "e2e: marks tests as end-to-end tests (real APIs, costs money)",
    "requires_api: marks tests that require API keys and may cost money",
    "file_upload: marks tests that test file upload functionality (costs money)",
    "research_modes: marks tests that test all 4 research modes (focus, docs, project, team)",
    "expensive: marks tests that cost >$1 (run sparingly)",
    "slow: marks tests as slow (may take >1 second)",
    "property: marks tests as property-based tests using Hypothesis",
    "security: marks tests as security-focused tests",
]

[tool.mypy]
# Type checking is being introduced incrementally (see ROADMAP "Phase E:
# Engineering Standards"). The committed end state is `--strict` as a blocking
# gate over all of `deepr/`. Today it runs NON-BLOCKING in CI to record a
# baseline; these settings are deliberately lenient so the baseline is the set
# of real type errors, not import-resolution noise. Strictness is ratcheted up
# package-by-package (core/, providers/, mcp/, security/, queue/, storage/, tools/, routing/, worker/, webhooks/, a2a/, importable skills package first) as annotations land.
python_version = "3.12"
# src layout: src is the package base, so src/deepr/foo maps to the module
# deepr.foo (not src.deepr.foo). Without this, mypy names files passed by path
# differently from how they are imported, and the same class reads as two
# incompatible types.
mypy_path = "src"
files = ["src/deepr"]
# Per-skill `tools/` resource dirs live under hyphenated skill folders
# (e.g. src/deepr/skills/code-analysis/tools/) that are not importable packages,
# so mypy maps several of them to the same top-level module name "tools" and
# aborts with a duplicate-module error before scanning anything. Exclude them
# so the baseline reflects the real importable codebase.
exclude = ['^src/deepr/skills/[^/]+/tools/']
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
# Per-package strict islands: switched on here as each package is cleaned, and
# enforced as a BLOCKING `mypy --strict ... src/deepr/<pkg>` step in CI.
[[tool.mypy.overrides]]
module = [
    "deepr.core",
    "deepr.core.*",
    "deepr.providers",
    "deepr.providers.*",
    "deepr.mcp",
    "deepr.mcp.*",
    "deepr.security",
    "deepr.security.*",
    "deepr.queue",
    "deepr.queue.*",
    "deepr.storage",
    "deepr.storage.*",
    "deepr.tools",
    "deepr.tools.*",
    "deepr.routing",
    "deepr.routing.*",
    "deepr.worker",
    "deepr.worker.*",
    "deepr.webhooks",
    "deepr.webhooks.*",
    "deepr.a2a",
    "deepr.a2a.*",
    "deepr.skills",
    "deepr.skills.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
warn_return_any = true
no_implicit_optional = true

[tool.mutmut]
# Mutation testing (Phase E): proves the suite actually catches regressions by
# injecting artificial faults and checking a test fails. Slow by nature, so it
# runs on a schedule / on demand (see .github/workflows/mutation.yml), never
# per-PR. Scoped to the safety-critical kernel first (budget, cost, contracts),
# where a surviving mutant is most dangerous.
paths_to_mutate = ["src/deepr/core/", "src/deepr/observability/cost_ledger.py", "src/deepr/experts/cost_safety.py"]
tests_dir = ["tests/unit/"]

[tool.uv]
# uv is the canonical package + Python-version manager (see ROADMAP "Phase E").
# `uv.lock` + `.python-version` pin a reproducible environment across dev, CI,
# and containers. setuptools remains the build backend for wheel compatibility,
# so `pip install deepr-research` keeps working for downstream consumers.
resolution = "highest"

[tool.setuptools.package-data]
deepr = [
    "py.typed",
    "config/*.json",
    "skills/*/*.yaml",
    "skills/*/*.md",
    "templates/*.md",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepr*"]
exclude = [
    "tests*",
    "docs*",
    "deepr.web.frontend.dist*",
    "deepr.web.frontend.node_modules*",
    "deepr.web.frontend.screenshots*",
]
